--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Imports:
     nnet,
     randomForest,
     utils
+URL: https://github.com/ang-yu/cdgd
+BugReports: https://github.com/ang-yu/cdgd/issues
