--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Ang", "Yu", , "ang_yu@outlook.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1828-0165"))
 Description: This package implements the causal decomposition of group disparities of Yu and Elwert (2022).
-License: MIT + file LICENSE
+License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
