--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cdgd
 Title: Causal Decomposition of Group Disparities
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: 
     person("Ang", "Yu", , "ang_yu@outlook.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1828-0165"))
@@ -10,13 +10,13 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Imports: 
-    caret,
-    nnet,
-    ranger,
-    utils,
-    stats
+    caret (>= 6.0-92),
+    nnet (>= 7.3-17),
+    ranger (>= 0.13.1),
+    utils (>= 4.2.0),
+    stats (>= 4.2.0)
 URL: https://github.com/ang-yu/cdgd
 BugReports: https://github.com/ang-yu/cdgd/issues
 Depends: 
-    R (>= 2.10)
+    R (>= 4.2.0)
 LazyData: true
