--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            comment = c(website = "https://ang-yu.github.io/",
                        ORCID = "0000-0002-1828-0165"))
 Description: This package implements the causal decomposition of group disparities of Yu and Elwert (2022).
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
@@ -14,10 +14,11 @@ Imports:
     caret (>= 6.0-93),
     nnet (>= 7.3-18),
     ranger (>= 0.14.1),
+    gbm (>= 2.1.8.1),
     utils (>= 4.2.2),
     stats (>= 4.2.2)
 URL: https://github.com/ang-yu/cdgd
 BugReports: https://github.com/ang-yu/cdgd/issues
 Depends: 
-    R (>= 4.2.2)
+    R (>= 4.2)
 LazyData: true
