--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Title: Causal Decomposition of Group Disparities
 Version: 0.2.1
 Authors@R: 
     person("Ang", "Yu", email = "ayu33@wisc.edu", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-1828-0165"))
+           comment = c(website = "https://ang-yu.github.io/",
+                       ORCID = "0000-0002-1828-0165"))
 Description: This package implements the causal decomposition of group disparities of Yu and Elwert (2022).
 License: MIT + file LICENSE
 Encoding: UTF-8
