--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,23 +2,24 @@ Package: cdgd
 Title: Causal Decomposition of Group Disparities
 Version: 0.2.6
 Authors@R: 
-    person("Ang", "Yu", email = "ayu33@wisc.edu", role = c("aut", "cre"),
-           comment = c(website = "https://ang-yu.github.io/",
-                       ORCID = "0000-0002-1828-0165"))
-Description: This package implements the causal decomposition of group disparities of Yu and Elwert (2023).
+    person("Ang", "Yu", , "ayu33@wisc.edu", role = c("aut", "cre"),
+           comment = c(website = "https://ang-yu.github.io/", ORCID = "0000-0002-1828-0165"))
+Description: This package implements the causal decomposition of group
+    disparities of Yu and Elwert (2023).
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
-Imports: 
-    caret (>= 6.0-93),
-    nnet (>= 7.3-18),
-    ranger (>= 0.14.1),
-    gbm (>= 2.1.8.1),
-    utils (>= 4.2.2),
-    stats (>= 4.2.2)
 URL: https://github.com/ang-yu/cdgd
 BugReports: https://github.com/ang-yu/cdgd/issues
 Depends: 
     R (>= 4.2)
+Imports: 
+    caret (>= 6.0),
+    stats (>= 4.2.2),
+    utils (>= 4.2.2)
+Suggests:
+    gbm (>= 2.1.8),
+    nnet (>= 7.3),
+    ranger (>= 0.14.1)
+Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
