--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,6 +5,11 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+    
+name: Setup R
+  uses: r-lib/actions/setup-r@v1
+  with:
+    r-version: '4.2.0'
 
 name: R-CMD-check
 
