--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,7 @@ BugReports: https://github.com/ang-yu/cdgd/issues
 Depends: 
     R (>= 4.1.0)
 Imports: 
-    caret (>= 6.0.0),
-    stats (>= 4.2.2),
-    utils (>= 4.2.2)
+    caret (>= 6.0.0)
 Suggests:
     gbm (>= 2.1.8),
     nnet (>= 7.3.0),
