--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Causal Decomposition of Group Disparities
 Version: 0.3.0.9000
 Authors@R: 
     person("Ang", "Yu", , "ang_yu@outlook.com", role = c("aut", "cre", "cph"),
-           comment = c(website = "https://ang-yu.github.io/", ORCID = "0000-0002-1828-0165"))
+           comment = c(website = "<https://ang-yu.github.io/>", ORCID = "0000-0002-1828-0165"))
 Description: The causal decompositions of group disparities developed by
     Yu and Elwert (2023)
     <https://ang-yu.github.io/files/Causal_Decomposition_of_Group_Disparities_2023.pdf>.
