--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Version: 0.3.1.9000
 Authors@R: 
     person("Ang", "Yu", , "ang_yu@outlook.com", role = c("aut", "cre", "cph"),
            comment = c(website = "<https://ang-yu.github.io/>", ORCID = "0000-0002-1828-0165"))
-Description: The causal decompositions of group disparities developed by
+Description: The framework of causal decomposition of group disparities developed by
     Yu and Elwert (2023)
-    <https://ang-yu.github.io/files/Causal_Decomposition_of_Group_Disparities_2023.pdf>.
-    This package implements the estimators for the decomposition
-    components that are based on efficient influence functions. For the
+    <https://arxiv.org/abs/2306.16591>.
+    This package implements the decomposition estimators
+    that are based on efficient influence functions. For the
     nuisance functions of the estimators, both parametric and
     nonparametric options are provided, as well as manual options in case
     the default models are not satisfying.
