--- a/revdep/library.noindex/cdgd/new/cdgd/DESCRIPTION
+++ b/revdep/library.noindex/cdgd/new/cdgd/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cdgd
 Title: Causal Decomposition of Group Disparities
-Version: 0.3.4
+Version: 0.3.3.9000
 Authors@R: 
     person("Ang", "Yu", , "ang_yu@outlook.com", role = c("aut", "cre", "cph"),
            comment = c(website = "<https://ang-yu.github.io/>", ORCID = "0000-0002-1828-0165"))
@@ -15,15 +15,18 @@ Description: The framework of causal decomposition of group disparities develope
 License: MIT + file LICENSE
 URL: https://github.com/ang-yu/cdgd
 BugReports: https://github.com/ang-yu/cdgd/issues
-Depends: 
-    R (>= 4.0.0)
-Imports: 
-    caret (>= 6.0.0)
-Suggests:
-    gbm (>= 2.1.8),
-    nnet (>= 7.3.0),
-    ranger (>= 0.14.1)
+Depends: R (>= 4.0.0)
+Imports: caret (>= 6.0.0)
+Suggests: gbm (>= 2.1.8), nnet (>= 7.3.0), ranger (>= 0.14.1)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+RemoteType: local
+RemoteUrl: /Users/Ang/Desktop/Research/Causal_decomposition/cdgd
+NeedsCompilation: no
+Packaged: 2024-01-06 13:50:12 UTC; Ang
+Author: Ang Yu [aut, cre, cph] (<https://ang-yu.github.io/>,
+    <https://orcid.org/0000-0002-1828-0165>)
+Maintainer: Ang Yu <ang_yu@outlook.com>
+Built: R 4.3.2; ; 2024-01-06 13:50:12 UTC; unix
