--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.0.0.9000
 Authors@R: 
     person("Ang", "Yu", , "ang_yu@outlook.com", role = c("aut", "cre", "cph"),
            comment = c(website = "<https://ang-yu.github.io/>", ORCID = "0000-0002-1828-0165"))
-Description: This package implements the causal decompositions of group disparities developed by Yu and Elwert (2025) <doi:10.1214/24-AOAS1990>. Estimation is based on efficient influence functions. For the nuisance functions of the estimators, both parametric and nonparametric options are provided, as well as manual options in case the default models are not satisfying.
+Description: Estimates the causal decompositions of group disparities developed by Yu and Elwert (2025) <doi:10.1214/24-AOAS1990>. For the nuisance functions of the estimators, we provide both parametric and nonparametric options, as well as manual options in case the default models are not satisfying.
 License: MIT + file LICENSE
 URL: https://github.com/ang-yu/cdgd
 BugReports: https://github.com/ang-yu/cdgd/issues
